mailnews/base/src/nsMsgWindow.cpp
@@ -179,8 +179,6 @@ NS_IMETHODIMP nsMsgWindow::SetStatusFeedback(nsIMsgStatusFeedback * aStatusFeedb
   nsCOMPtr<nsIDocShell> messageWindowDocShell; 
   GetMessageWindowDocShell(getter_AddRefs(messageWindowDocShell));
 
-  NS_ASSERTION(messageWindowDocShell, "No messagepane docshell found! setStatusFeedback called before setDOMWindow");
-
   // register our status feedback object as a web progress listener
   nsCOMPtr<nsIWebProgress> webProgress(do_GetInterface(messageWindowDocShell));
   if (webProgress && mStatusFeedback && messageWindowDocShell)
@@ -266,12 +264,8 @@ NS_IMETHODIMP nsMsgWindow::SetRootDocShell(nsIDocShell * aDocShell)
   {
     mRootDocShellWeak = do_GetWeakReference(aDocShell);
     nsCOMPtr<nsIURIContentListener> listener(do_GetInterface(aDocShell));
-    if (listener) {
+    if (listener)
       listener->SetParentContentListener(this);
-    }
-  // be sure to set the application flag on the root docshell
-  // so it knows we are a mail application.
-  aDocShell->SetAppType(nsIDocShell::APP_TYPE_MAIL);
   }
   return NS_OK;
 }
