mail/base/content/mailWindow.js
@@ -189,6 +189,7 @@ function InitMsgWindow()
   mailSession.AddMsgWindow(msgWindow);
   getBrowser().docShell.allowAuth = false;
   msgWindow.rootDocShell.allowAuth = true; 
+  msgWindow.rootDocShell.appType = Components.interfaces.nsIDocShell.APP_TYPE_MAIL;
 }
 
 function AddDataSources()
