mailnews/base/search/resources/content/FilterListDialog.js
@@ -94,7 +94,8 @@ const nsMsgFilterMotion = Components.interfaces.nsMsgFilterMotion;
 function onLoad()
 {
     gFilterListMsgWindow = Components.classes["@mozilla.org/messenger/msgwindow;1"].createInstance(Components.interfaces.nsIMsgWindow);
-    gFilterListMsgWindow.domWindow = window;     
+    gFilterListMsgWindow.domWindow = window; 
+    gFilterListMsgWindow.rootDocShell.appType = Components.interfaces.nsIDocShell.APP_TYPE_MAIL;   
     gFilterListMsgWindow.statusFeedback = gStatusFeedback;
 
     gFilterBundle = document.getElementById("bundle_filter");
